<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">NutriApp</string>
    <string name="action_settings">Settings</string>
	<string name="titulo">Informe seu nome</string>
	<string name="clique">Login</string>
	<string name="saudacao">Olá</string>
	<string name="peso">Digite o seu peso:</string>
	<string name="altura">Digite o sua altura:</string>
	<string name="imc">Seu IMC:</string>
	<string name="imcButao">Calcular IMC</string>
	<string name="calcsubButao">Substituicoes</string>
	<string name="calccalButao">Calcular Calorias</string>
	<string name="substituirButao">Procurar</string>
	<string name="substituicao">Alimentos neste grupo Alimentar:</string>
	<string name="alimento">Digite o grupo alimentar:</string>
	
	
</resources>
